--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Levi</title>
+    <link href="cv.css"
+          rel="stylesheet">
 </head>
 <body>
-    <h1>Wallis Levente András</h1>
-    <h2>20001.02.11<br>Budapest</h2>
+    <h1 id="nev">Wallis Levente András</h1>
+    <h2>2001.02.11<br>Budapest</h2>
     <h3>Elérhetőség</h3>
     <img src="kep.jpg" alt="Levente"> 
 
@@ -14,8 +16,9 @@
     <h5>e-mail: asivbi@jsnkfs.com</h5>
     <h6><a href="http://linkedin.com" target="_blank"> LinkedIn profilom</a></h6>
     <p><span>Wallis Leventének hívnak</span> és a BCE hallgatója vagyok. Ez az oldal a számháló tárgy második gyakorlatára készült.</p>
-    <p>Kedvenc számaim:</p>
+   
     <div>
+        <p>Kedvenc számaim:</p>
         <ul>
             <li>4</li>
             <li>11</li>
