--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <a href="cv.html">Üdvözöllek</a>
+    <a href="hajo.html">Üdvözöllek</a>
 </body>
 </html>
