--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -7,7 +7,7 @@
     <link href="hajo.css" rel="stylesheet" />
     <script src="hetedik.js"></script>
 </head>
-<body onload="letöltés()">
+<body onload="kérdésBetöltés()">
     <div id="külső">
         <div id="kérdés_szöveg">
             <p>Kérdés szövege</p>
