--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="hajo.css" rel="stylesheet" />
-    <script src="hetedik.js"></script>
+    <script src="tizedik.js"></script>
 </head>
-<body onload="kérdésBetöltés()">
+<body>
     <div id="külső">
         <div id="kérdés_szöveg">
             <p>Kérdés szövege</p>
         </div>
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható" onclick="jovalasz1()">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható jó" onclick="jovalasz2()">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható rossz" onclick="jovalasz3()">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattintható" onclick="választás(1)">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattintható" onclick="választás(2)">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható" onclick="választás(3)">Válasz 3</div>
             </div>
-            <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+            <div id="kép_keret">
+                <img id="kép" src="" />
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható" onclick="minusz()">Vissza</div>
-            <div class="gomb kattintható" onclick="plusz()">Előre</div>
+            <div id="vissza_gomb" class="gomb kattintható" >Vissza</div>
+            <div id="előre_gomb" class="gomb kattintható" >Előre</div>
         </div>
     </div>
 </body>
